# standup

./: .gitignore  Cargo.toml  Dockerfile  Makefile  Procfile  README.md  dockerfile  nw.toml  ta.toml
assets/js/: standup.js
assets/stylesheets/: main.css
config/: nw.toml  ta.toml
js/: standup.js
src/: helpers.rs  lib.rs  main.rs
stylesheets/: main.css
templates/: index.html
