[package]
name = "standup"
version = "0.1.0"
authors = ["Danny <dannypen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
askama = "0.9"

[build-dependencies]
askama = "0.9"
